added getMyManager method added getMyID added getUserByUsername added getAllUsernames added filter By Role to getAllUsers endpoint
